# udacity_robotics_sw_engineer

./: README.md
Project1/model/Building/: model.sdf
Project1/model/robot/: model.sdf
Project1/script/: hello.cpp
Project1/world/: myworld.world  world.world
Project2/catkin_ws/: .gitignore
Project2/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Project2/catkin_ws/src/ball_chaser/: CMakeLists.txt  package.xml
Project2/catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
Project2/catkin_ws/src/my_robot/: package.xml
Project3/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Project3/catkin_ws/src/: project3.rviz
Project4/: rtabmap.db
Project4/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Project5/: README.md
Project5/catkin_ws/src/: map
Project5/catkin_ws/src/add_markers/: CMakeLists.txt
Project5/catkin_ws/src/home_service/: CMakeLists.txt  package.xml
Project5/catkin_ws/src/home_service/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Project5/catkin_ws/src/home_service/launch/: amcl.launch  keyboard_teleop.launch  slam.launch  view_navigation.launch  world.launch
Project5/catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
Project5/catkin_ws/src/rvizConfig/: navigation.rviz  navigation_markers.rviz
Project5/catkin_ws/src/scripts/: add_marker.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
(+53 files in other folders)
