<package>
  <name>home_service</name>
  <version>0.1.0</version>
  <description>Gazebo launchers and world for my_robot simulation</description>
  <maintainer email="michael.s.nicholson@gmail.com">Mike Nicholson</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>
  <!--
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  -->
</package>
